--- a/.github/workflows/ci_host_tester.yaml
+++ b/.github/workflows/ci_host_tester.yaml
@@ -28,7 +28,7 @@ jobs:
           pip install -r requirements.txt
     - name: Run Tests
       run: |
-          python entry.py test
+          python fossil-updater.py test
 
   host_windows:
     strategy:
@@ -46,7 +46,7 @@ jobs:
           pip install -r requirements.txt
     - name: Run Tests
       run: |
-          python entry.py test
+          python fossil-updater.py test
 
   host_ubuntu:
     strategy:
@@ -64,4 +64,4 @@ jobs:
           pip install -r requirements.txt
     - name: Run Tests
       run: |
-          python entry.py test
+          python fossil-updater.py test
